--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cts-plugin = {git = "https://github.com/erihsu/cts-plugin",rev="2d16200"}
+cts-plugin = {git = "https://github.com/erihsu/cts-plugin",rev="3ad3781"}
 libloading = "0.5"
 rand = "*"
+serde_json = "*"
